Fix menu dropdown visibility issue

--- a/web/src/styles/main.css
+++ b/web/src/styles/main.css
@@ -323,6 +323,7 @@
       width: auto;
       background-color: unset;
       color: inherit;
+      overflow: visible;
     }
   }
 
